--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,9 @@
 #main-canvas {
   /* background-color: red; */
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
